[Update] Implemented Num Followees
